# pytest-same-file

./: .gitignore  README.md  makefile  pyproject.toml
src/: main.py
